--- a/lab1/styles.css
+++ b/lab1/styles.css
@@ -3,7 +3,7 @@ input {
 }
 
 label {
-    width: 15rem;
+    width: 10rem;
 }
 
 input:valid {
@@ -19,5 +19,6 @@ input:invalid {
 }
 
 .inputs div {
-    margin: 0.5rem 0;
+    margin: 0.8rem 0;
+    display: flex;
 }
