--- a/lab3/styles.css
+++ b/lab3/styles.css
@@ -27,3 +27,17 @@ body {
     height: 100%;
     width: 70%;
 }
+
+#resp {
+    height: 50%;
+}
+
+#area {
+    height: 80%;
+    background-color: lightblue;
+}
+
+#tools {
+    height: 20%;
+    background-color: lightcoral;
+}
